# photo-search

./: .gitignore  ACCESSIBILITY_IMPLEMENTATION_REVIEW.md  ACCESSIBILITY_IMPLEMENTATION_SUMMARY.md  AGENTS.md  API_CONTRACT_ALIGNMENT.md  API_ENDPOINTS_ANALYSIS.md  API_IMPLEMENTATION_GUIDE.md  API_INTEGRATION_ANALYSIS_REPORT.md  API_VERIFICATION_COMPLETE.md  AUDIT_REPORT.md  BACKEND_FRONTEND_INTEGRATION_AUDIT.md  BACKEND_FRONTEND_INTEGRATION_STATUS.md  CODEX_RECENT_WORK_STATUS.md  COMPLEXITY_ANALYSIS.md  COMPREHENSIVE_EVALUATION.md  COMPREHENSIVE_FEATURES_ANALYSIS.md  COMPREHENSIVE_TASK_LIST.md  CONTRIBUTING.md  CURRENT_PROJECT_STATUS.md  CURRENT_STATUS_SUMMARY.md  CURRENT_STATUS_TASK_LIST.md  DEPLOYMENT.md  DESKTOP_APP_AUDIT.md  DETAILED_ASPECTS_EVALUATION.md  DETAILED_UI_ANALYSIS.md  ELECTRON_FILE_ACCESS_ISSUE_REVIEW.md  ELECTRON_V3_TESTING_REPORT.md  FEATURE_IMPLEMENTATION_ROADMAP.md  FIXES_SUMMARY.md  FOLDER_LOADING_ISSUES.md  FRONTEND_REBUILD_MASTER_PLAN.md  FRONTEND_REBUILD_PROMPT.md  GIT_WORKFLOW_REFERENCE.md  IMPLEMENTATION_PRIORITIES.md  INTENT_COMPLIANCE_CHECKLIST.md  INTENT_FIRST_IMPLEMENTATION_STATUS.md  LANDING_MEDIA_AND_GROWTH_NOTES.md  LANDING_PAGE_REVIEW.md  LANDING_STATUS_ROLLUP.md  LAUNCH_READINESS_CHECKLIST.md  (+69 more)
.github/: copilot-instructions.md
.playwright-mcp/: dropdown_open
docs/: ACCESSIBILITY_AUDIT.md  ACCESSIBILITY_IMPLEMENTATION.md  API_REFERENCE.md  APPCHROME_PHASE0_IMPLEMENTATION_PLAN.md  AUTH.md  CLAUDE.md  CODEX_RECENT_WORK_STATUS.md  COMPREHENSIVE_PROJECT_REVIEW.md  DESKTOP_ARCHITECTURE_PLAN.md  DEVELOPER_GUIDE.md  FAL_QWEN_IMAGE_EDIT.md  (+28 more)
(+1463 files in other folders)
